--- a/Portfolio-fullstack/package.json
+++ b/Portfolio-fullstack/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "body-parser": "^2.2.0",
+    "dot": "^1.1.3",
+    "dotenv": "^16.5.0",
+    "env": "^0.0.2",
     "express": "^5.1.0",
     "mongoose": "^8.16.0"
   }
